# pokerlib

./: CMakeLists.txt  defs.cpp  defs.h  luts.h
executables/: simulator.cpp  test.cpp  timeallhands.cpp
simulation/: game.cpp  game.h  player.cpp  player.h
